Add informative comment to Main