@@ -15,6 +15,29 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.charset.Charset;
 
+/*
+     _    _  _
+    | |  | |(_)
+    | |  | | _  _ __    __ _  _ __ ___    __ _  _ __
+    | |/\| || ||  _ \  / _  ||  _   _ \  / _  ||  _ \
+    \  /\  /| || | | || (_| || | | | | || (_| || | | |
+     \/  \/ |_||_| |_| \__  ||_| |_| |_| \__ _||_| |_|
+                        __/ |
+                       |___/
+
+            https://github.com/Wingman/wingman
+            Lesser General Public License v3.0
+
+    Please use these VM arguments when running the client.
+    They come from the official Old School launcher.
+
+    -Xmx384m -Xss2m -Xincgc
+    -Dsun.java2d.noddraw=true
+    -XX:CompileThreshold=1500
+    -XX:+UseConcMarkSweepGC
+    -XX:+UseParNewGC
+*/
+
 public final class Main {
 
     /**
